# WAssistant

./: .commitlintrc.json  .coverage  .dockerignore  .editorconfig  .env.example  .eslintrc.cjs  .firebaserc  .flake8  .gitattributes  .gitignore  .lintstagedrc.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.api  Dockerfile.dev  ENHANCEMENT_SUMMARY.md  Makefile  PLAY_STORE_RELEASE_CHECKLIST.md  PROJECT_STRUCTURE.txt  PROMPTS_FOR_CODING_AGENT.md  README.md  RELEASE.md  SECURITY.md  analysis_options.yaml  composer.json  docker-compose.yml  eslint.config.js  firebase.json  justfile  lighthouserc.json  netlify.toml  package-lock.json  package.json  pubspec.yaml  pyproject.toml  pytest.ini  (+5 more)
.devcontainer/: devcontainer.json
.firebase/: hosting.YnVpbGRcd2Vi.cache  hosting.bGFuZGluZ1xkaXN0.cache  hosting.cHVibGlj.cache
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-cd.yml  ci.yml  codeql-analysis.yml  dependabot-automerge.yml  deploy.yml  firebase_deploy.yml  flutter_ci.yml  lighthouse-preview.yml  lighthouse.yml  main.yml  play_store_deploy.yml  quality-retention.yml  quality.yml  release.yml
.husky/: pre-commit
android/: PLAY_STORE_README.md  build.gradle
android/app/: build.gradle.kts  google-services.json
backend/: __init__.py  analytics.py  analytics_service.py  auth.py  auth_service.py  bulk_operations.py  cache_manager.py  config.py  database.py  main.py  middleware.py  models.py  requirements.txt  routes.py  schemas.py  security_manager.py  utils.py  utils_service.py  webhook_manager.py
backend/ml/: engagement_predictor.py  template_recommender.py
backend/services/: analytics_dashboard.py  nlp_service.py  websocket_server.py
backend/tests/: test_api.py  test_endpoints.py
coverage/: lcov.info
deploy/: check_readiness.py  deploy.sh  nginx.conf  wassistant.service
docs/: ANALYTICS_REMOVAL_SUMMARY.md  ARCHITECTURE.md  ENHANCEMENTS_SUMMARY.md  MULTI_AGENT_PROTOCOL.md  RESPONSIVE_LAYOUT_GUIDE.md  TECHNICAL_ENHANCEMENTS.md
docs/architecture/: 001-firebase-backend.md  ADR_001_TESTING_STRATEGY.md  README.md
infrastructure/: README.md  main.tf
integration_test/: app_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
landing/: index.html  package.json  tailwind.config.ts  vite.config.ts
landing/public/: faq.html  guide.html  manifest.json  privacy_policy.html  sitemap.xml  terms.html
landing/src/: App.tsx  index.css
lib/: firebase_options.dart  locator.dart  main.dart  main_web.dart
lib/l10n/: app_ar.arb  app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_localizations.dart  app_localizations_ar.dart  app_localizations_de.dart  app_localizations_en.dart  app_localizations_es.dart  (+1 more)
monitoring/: prometheus.yml
public/: index.html
python_scripts/: __init__.py  bulk_generate_links.py  generate_qr_preview.py  resize_icons.py  validate_links.py  whatsapp_utils.py
scripts/: build_android.ps1  deploy_web.ps1  generate_keystore.ps1  lint_all.ps1  run_all.ps1  setup.ps1  validate_deployment.ps1  validate_project.py
terraform/: main.tf
test/: unit_test.dart
tools/: __init__.py  benchmark.py  check_retention_metrics.py  cli.py  doc_gen.py  full_build.py  generate_coverage_badge.py  generate_docs.py  generate_mocks.py  load_test.py  manager.py  migrate.py  monitor.py  pre_commit.py  print_lines.py
wassistant_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
web/: 404.html  faq.html  index.html  main.js  manifest.json  privacy.html  privacy_policy.html  robots.txt  sitemap.xml  style.css  terms.html  tsconfig.json
(+115 files in other folders)
